testcases/error/invalid_modifier.veryl
module invalid_modifier (
    a: input default logic,
) {}
